--- a/package.json
+++ b/package.json
@@ -3,9 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "classnames": "^2.2.6",
     "immutable": "^4.0.0-rc.12",
     "node-sass": "^4.12.0",
     "react": "^16.9.0",
+    "react-contenteditable": "^3.3.2",
     "react-dom": "^16.9.0",
     "react-redux": "^7.1.1",
     "react-scripts": "3.1.2",
