--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "react": "^16.9.0",
     "react-contenteditable": "^3.3.2",
     "react-dom": "^16.9.0",
+    "react-icons": "^3.7.0",
     "react-redux": "^7.1.1",
     "react-scripts": "3.1.2",
     "redux": "^4.0.4"
