--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-icons": "^3.7.0",
     "react-redux": "^7.1.1",
     "react-scripts": "3.1.2",
+    "react-spring": "^8.0.27",
     "redux": "^4.0.4"
   },
   "scripts": {
