--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "classnames": "^2.2.6",
     "immutable": "^4.0.0-rc.12",
     "node-sass": "^4.12.0",
+    "prop-types": "^15.7.2",
     "react": "^16.9.0",
     "react-contenteditable": "^3.3.2",
     "react-dom": "^16.9.0",
